<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="@dimen/cashier_system_column_title"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:descendantFocusability="blocksDescendants"
        android:orientation="horizontal">
            <TextView 
            android:id="@+id/cashier_system_column_sort"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:text="@string/cashier_system_column_sort"
            android:gravity="center"
            android:textSize="@dimen/fontSize_20"
            android:textColor="@android:color/black"/>
             <TextView
            android:id="@+id/cashier_system_column_cargo_number" 
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:background="@color/white"
            android:text="@string/cashier_system_column_cargo_number"
            android:gravity="center"
            android:textSize="@dimen/fontSize_20"
            android:textColor="@android:color/black"/>
             <TextView 
            android:id="@+id/cashier_system_column_code"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:background="@color/white"
            android:text="@string/cashier_system_column_code"
            android:gravity="center"
            android:textSize="@dimen/fontSize_20"
            android:textColor="@android:color/black"/>
             <TextView
            android:id="@+id/cashier_system_column_name" 
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:background="@color/white"
            android:text="@string/cashier_system_column_name"
            android:gravity="center"
            android:textSize="@dimen/fontSize_20"
            android:textColor="@android:color/black"/>
             <EditText 
            android:id="@+id/cashier_system_column_count" 
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:background="@color/white"
            android:text="@string/cashier_system_column_count"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="4"
            android:editable="false"
            android:textSize="@dimen/fontSize_20"
            android:textColor="@android:color/black"/>
             <TextView
             android:id="@+id/cashier_system_column_old_price"  
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:background="@color/white"
            android:text="@string/cashier_system_column_old_price"
            android:gravity="center"
            android:textSize="@dimen/fontSize_20"
            android:textColor="@android:color/black"/>
             <TextView
                 android:id="@+id/cashier_system_column_now_price"   
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:background="@color/white"
            android:text="@string/cashier_system_column_now_price"
            android:gravity="center"
            android:textSize="@dimen/fontSize_20"
            android:textColor="@android:color/black"/>
             <TextView 
            android:id="@+id/cashier_system_column_money"   
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:background="@color/white"
            android:text="@string/cashier_system_column_money"
            android:gravity="center"
            android:textSize="@dimen/fontSize_20"
            android:textColor="@android:color/black"/>
             <TextView
            android:id="@+id/cashier_system_column_clerk"       
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:background="@color/white"
            android:text="@string/cashier_system_column_clerk"
            android:gravity="center"
            android:textSize="@dimen/fontSize_20"
            android:textColor="@android:color/black"/>
        </LinearLayout>
</LinearLayout>
