<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/white_f5"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="3dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="left"
            android:text="@string/cashier_system_title"
            android:textColor="@color/black"
            android:textSize="@dimen/fontSize_22" />

        <TextView
            android:id="@+id/cashier_system_machine_status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/cashier_system_machine_status"
            android:textColor="@color/black"
            android:textSize="@dimen/fontSize_15" />

        <TextView
            android:id="@+id/cashier_system_machine_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left|center_vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/fontSize_15" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cashier_system_business"
                android:textColor="@color/black"
                android:textSize="@dimen/fontSize_28"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cashier_system_business"
                android:layout_width="@dimen/business_code_input_width"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:hint="@string/cashier_system_business_hint"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

    <TextView style="@style/whiteHDividerLine2DP" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="top|left"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@android:color/black"
            android:gravity="left|top"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/cashier_system_column_title"
                android:layout_marginTop="1dp"
                android:background="@color/black"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/cashier_system_column_sort"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fontSize_20" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="3"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/cashier_system_column_cargo_number"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fontSize_20" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="4"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/cashier_system_column_code"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fontSize_20" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="6"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/cashier_system_column_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fontSize_20" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="2"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/cashier_system_column_count"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fontSize_20" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="2"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/cashier_system_column_old_price"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fontSize_20" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="2"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/cashier_system_column_now_price"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fontSize_20" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="2"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/cashier_system_column_money"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fontSize_20" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="2"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/cashier_system_column_clerk"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fontSize_20" />
            </LinearLayout>

            <TextView style="@style/blackHDividerLine1DP" />

            <ListView
                android:id="@+id/cashier_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_f5" >
            </ListView>
        </LinearLayout>
    </RelativeLayout>

    <TextView style="@style/whiteHDividerLine2DP" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white_f5"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_f5"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/cashier_system_receive_payments"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/orange_corner_bg"
                android:gravity="center"
                android:text="@string/cashier_system_receive_payments"
                android:textColor="@color/white"
                android:textSize="@dimen/fontSize_20" />

            <TextView
                android:id="@+id/cashier_system_open_cashbox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/orange_corner_bg"
                android:gravity="center"
                android:text="@string/cashier_system_open_cashbox"
                android:textColor="@color/white"
                android:textSize="@dimen/fontSize_20" />

            <TextView
                android:id="@+id/cashier_system_close_cashbox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/orange_corner_bg"
                android:gravity="center"
                android:text="@string/cashier_system_close_cashbox"
                android:textColor="@color/white"
                android:textSize="@dimen/fontSize_20" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>