<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/gathering_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/title"
        android:padding="@dimen/layout_padding" >

        <Button
            android:id="@+id/cashier_setting_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:drawableLeft="@drawable/back"
            android:text="@string/cashier_system_btn_back"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fontSize_28" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/cashier_system_setting"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize_48" />

        <Button
            android:id="@+id/cashier_gathering_btn_order_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/cashier_system_gathering_order_cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fontSize_28"
            android:visibility="invisible" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#ecf0f1"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cashier_system_title"
            android:textColor="@color/black"
            android:textSize="@dimen/fontSize_48" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/cashier_system_contact_tech"
            android:textColor="@color/black"
            android:textSize="@dimen/fontSize_28" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="#ffffff"
        android:padding="15dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/cashier_system_machine_showcustom"
                android:textSize="@dimen/fontSize_28" />
            
            <!-- <Switch
                android:id="@+id/cashier_switch_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="打开中"
                android:textOff="关闭中"
                android:layout_alignParentRight="true"
                android:textSize="@dimen/fontSize_28"
                />
			-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/cashier_setting_btn_open"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/blue_button_corner_bg"
                    android:padding="20dp"
                    android:text="@string/cashier_system_btn_open"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fontSize_22" />

                <Button
                    android:id="@+id/cashier_setting_btn_close"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/red_button_corner_bg"
                    android:padding="20dp"
                    android:text="@string/cashier_system_btn_close"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fontSize_22" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>